# MetagraphMatchingBenchmark

./: CMakeLists.txt  build_unix.sh  clean_unix.sh  readme.txt
include/: BaseVertex.h  BlossomIVSolver.h  BlossomIVSolver.tpp  BlossomVSolver.h  BlossomVSolver.tpp  BlossomVertex.h  BlossomVertex.tpp  CherryBlossom.h  CherryBlossom.tpp  CherryTree.h  CherryTree.tpp  Debug.h  DimacsGenerator.h  EdmondsBoostSolver.h  EdmondsBoostSolver.tpp  EdmondsLemonSolver.h  EdmondsLemonSolver.tpp  EdmondsVertex.h  EdmondsVertex.tpp  GExporter.h  GGenerator.h  GImporter.h  GraphSource.h  IntStepper.h  Job.h  List.h  List.tpp  ListElement.h  ListElement.tpp  MultiTreeSolver.h  MultiTreeSolver.tpp  SimpleGraph.h  SimpleGraph.tpp  Solver.h  SolverEnums.h  Statistics.h  TSPParser.h  Tools.h  TriangleGenerator.h  TypeEnums.h  (+2 more)
include/norm/: HalfEdge.h  HalfEdge.tpp  MCherryBlossom.h  MCherryBlossom.tpp  MCherryTree.h  MCherryTree.tpp  MVertex.h  MVertex.tpp  MetaGraphsSolver.h  MetaGraphsSolver.tpp
include/qpt/: HalfEdge.h  HalfEdge.tpp  MCherryBlossom.h  MCherryBlossom.tpp  MCherryTree.h  MCherryTree.tpp  MVertex.h  MVertex.tpp  MetaGraphsSolver.h  MetaGraphsSolver.tpp
include/wr/: HalfEdge.h  HalfEdge.tpp  MCherryBlossom.h  MCherryBlossom.tpp  MCherryTree.h  MCherryTree.tpp  MVertex.h  MVertex.tpp  MetaGraphsSolver.h  MetaGraphsSolver.tpp
libs/blossom-iv/: Makefile
libs/blossom-v/: Makefile
libs/concorde-97/: Makefile.conf
src/: DimacsGenerator.cpp  GExporter.cpp  GGenerator.cpp  GImporter.cpp  GraphSource.cpp  IntStepper.cpp  Job.cpp  Main.cpp  Statistics.cpp  TSPParser.cpp  Tools.cpp  TriangleGenerator.cpp
visualization/: visualize.py
